Fix mobile mini player layout overlapping bug

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -120,8 +120,6 @@
     }
 
     .player-controls {
-        order: -1;
-        grid-column: 1 / -1;
         display: none;
     }
 
